--- a/style.css
+++ b/style.css
@@ -24,7 +24,7 @@ h3 {
 
 ul {
     margin-top: 0;
-    padding-left: 10px;
+    padding: 0;
     list-style: none;
 }
 
@@ -42,8 +42,9 @@ img {
     
     .nav-wrapper{
         width: 320px;
+        height: 40px;
         margin: 0 auto;
-        background-color: rgba(0, 0, 0, 0.3);
+        background-color: rgba(0, 0, 0, 0.5);
         position: relative;
         text-align: center;
     }
@@ -54,6 +55,32 @@ img {
          appearance: none;
     }
 
+    .nav-label{
+        display: block;
+        position: absolute;
+        top: 0;
+        left: 0;
+        width: 100%;
+        height: 100%;
+        cursor: pointer;
+        line-height: 40px;
+        z-index: 2;
+    }
 
+    .nav-list{
+        display: block;
+        position: absolute;
+        width: 100%;
+        top: 40px;
+    }
+
+    .nav-link{
+        display: block;
+        padding: 10px;
+        text-decoration: none;
+        background-color: black;
+        color: white;
+        border-top: 1px solid rgba(255, 255, 255, 0.5);
+    }
 
 }
