--- a/style.css
+++ b/style.css
@@ -72,6 +72,9 @@ img {
         position: absolute;
         width: 100%;
         top: 40px;
+        max-height: 0;
+        font-size: 0;
+        overflow: hidden;
     }
 
     .nav-link{
@@ -99,5 +102,10 @@ img {
 
     .burger-line-first-fourth{
         top: 28px;
+    }
+
+    #check-menu:checked + .nav-list{
+        max-height: 100px;
+        font-size: 16px;
     }
 }
