--- a/style.css
+++ b/style.css
@@ -122,4 +122,36 @@ img {
     #check-menu:checked ~ .burger-line-thirth{
         transform: rotate(-45deg);
     }
+
+    .main-title{
+        text-align: center;
+    }
+
+    .about__book-btn{
+        display: block;
+        width: 100px;
+        height: 25px;
+        margin: 0 auto;
+        border: 1px solid black;
+    }
+    picture{
+        position: relative;
+        display: block;
+    }
+    picture::after{
+        content: "";
+        display: block;
+        width: 100%;
+        height: 100%;
+        background-color: black;
+        opacity: 0.4;
+        z-index: 3;
+        position: absolute;
+        top: 0;
+    }
+
+
+
+
+
 }
