--- a/style.css
+++ b/style.css
@@ -124,17 +124,6 @@ img {
         transform: rotate(-45deg);
     }
 
-    .main-title{
-        text-align: center;
-    }
-
-    .about__book-btn{
-        display: block;
-        width: 100px;
-        height: 25px;
-        margin: 0 auto;
-        border: 1px solid black;
-    }
     picture{
         position: relative;
         display: block;
@@ -149,6 +138,41 @@ img {
         z-index: 2;
         position: absolute;
         top: 0;
+    }
+
+    .main-title{
+        text-align: center;
+    }
+
+    .welcome__wrapper{
+        margin: 30px auto;
+        max-width: 60%;
+        overflow: hidden;
+    }
+    .welcome{
+
+    }
+    .welcome__title{
+        display: block;
+        width: 100%;
+        animation: welcome 5s linear infinite;
+    }
+    
+    @keyframes welcome {
+        0%{
+            transform: translateX(100%);
+        }
+        100%{
+            transform: translateX(-100%);
+        }
+        
+    }
+    .about__book-btn{
+        display: block;
+        width: 100px;
+        height: 25px;
+        margin: 0 auto;
+        border: 1px solid black;
     }
 
 
